src/program/latex/snapshots/quil_rs__program__latex__tests__programs__program_good_complex_params.snap
---
source: src/program/latex/mod.rs
assertion_line: 1301
expression: "r#\"\\documentclass[convert={density=300,outext=.png}]{standalone}\n\\usepackage[margin=1in]{geometry}\n\\usepackage{tikz}\n\\usetikzlibrary{quantikz}\n\\begin{document}\n\\begin{tikzcd}\n\\lstick{\\ket{q_{0}}} & \\phase{\\text{(pi/2)}} & \\qw & \\qw \\\\\n\\lstick{\\ket{q_{1}}} & \\ctrl{-1} & \\qw & \\qw \\\\\n\\lstick{\\ket{q_{3}}} & \\qw & \\ctrl{1} & \\qw \\\\\n\\lstick{\\ket{q_{4}}} & \\qw & \\phase{\\text{(cos(sin((2*(pi/3))))*(cis((-1))*exp((1i*pi))))}} & \\qw\n\\end{tikzcd}\n\\end{document}\"#"
---
\documentclass[convert={density=300,outext=.png}]{standalone}
\usepackage[margin=1in]{geometry}
\usepackage{tikz}
\usetikzlibrary{quantikz}
\begin{document}
\begin{tikzcd}
\lstick{\ket{q_{0}}} & \phase{\text{(pi/2)}} & \qw & \qw \\
\lstick{\ket{q_{1}}} & \ctrl{-1} & \qw & \qw \\
\lstick{\ket{q_{3}}} & \qw & \ctrl{1} & \qw \\
\lstick{\ket{q_{4}}} & \qw & \phase{\text{(cos(sin((2*(pi/3))))*(cis((-1))*exp((1i*pi))))}} & \qw
\end{tikzcd}
\end{document}
