src/program/latex/snapshots/quil_rs__program__latex__tests__programs__program_good_defgate_with_long_name.snap
---
source: src/program/latex/mod.rs
assertion_line: 1318
expression: "r#\"\\documentclass[convert={density=300,outext=.png}]{standalone}\n\\usepackage[margin=1in]{geometry}\n\\usepackage{tikz}\n\\usetikzlibrary{quantikz}\n\\begin{document}\n\\begin{tikzcd}\n\\lstick{\\ket{q_{0}}} & \\gate{______________________________________ugly-python-convention______________________________________} & \\qw & \\qw \\\\\n\\lstick{\\ket{q_{1}}} & \\qw & \\gate{______________________________________ugly-python-convention______________________________________} & \\qw\n\\end{tikzcd}\n\\end{document}\"#"
---
\documentclass[convert={density=300,outext=.png}]{standalone}
\usepackage[margin=1in]{geometry}
\usepackage{tikz}
\usetikzlibrary{quantikz}
\begin{document}
\begin{tikzcd}
\lstick{\ket{q_{0}}} & \gate{______________________________________ugly-python-convention______________________________________} & \qw & \qw \\
\lstick{\ket{q_{1}}} & \qw & \gate{______________________________________ugly-python-convention______________________________________} & \qw
\end{tikzcd}
\end{document}
