src/program/latex/snapshots/quil_rs__program__latex__tests__programs__program_good_simple_params.snap
---
source: src/program/latex/mod.rs
assertion_line: 1312
expression: "r#\"\\documentclass[convert={density=300,outext=.png}]{standalone}\n\\usepackage[margin=1in]{geometry}\n\\usepackage{tikz}\n\\usetikzlibrary{quantikz}\n\\begin{document}\n\\begin{tikzcd}\n\\lstick{\\ket{q_{0}}} & \\ctrl{1} & \\phase{\\text{(1-2i)}} & \\qw \\\\\n\\lstick{\\ket{q_{1}}} & \\phase{\\text{1}} & \\ctrl{-1} & \\qw\n\\end{tikzcd}\n\\end{document}\"#"
---
\documentclass[convert={density=300,outext=.png}]{standalone}
\usepackage[margin=1in]{geometry}
\usepackage{tikz}
\usetikzlibrary{quantikz}
\begin{document}
\begin{tikzcd}
\lstick{\ket{q_{0}}} & \ctrl{1} & \phase{\text{(1-2i)}} & \qw \\
\lstick{\ket{q_{1}}} & \phase{\text{1}} & \ctrl{-1} & \qw
\end{tikzcd}
\end{document}
