src/program/latex/snapshots/quil_rs__program__latex__tests__programs__program_h5_cnot52_y2_cnot23.snap
---
source: src/program/latex/mod.rs
assertion_line: 804
expression: "r#\"\\documentclass[convert={density=300,outext=.png}]{standalone}\n\\usepackage[margin=1in]{geometry}\n\\usepackage{tikz}\n\\usetikzlibrary{quantikz}\n\\begin{document}\n\\begin{tikzcd}\n\\lstick{\\ket{q_{2}}} & \\qw & \\targ{} & \\gate{Y} & \\ctrl{1} & \\qw \\\\\n\\lstick{\\ket{q_{3}}} & \\qw & \\qw & \\qw & \\targ{} & \\qw \\\\\n\\lstick{\\ket{q_{5}}} & \\gate{H} & \\ctrl{-2} & \\qw & \\qw & \\qw\n\\end{tikzcd}\n\\end{document}\"#"
---
\documentclass[convert={density=300,outext=.png}]{standalone}
\usepackage[margin=1in]{geometry}
\usepackage{tikz}
\usetikzlibrary{quantikz}
\begin{document}
\begin{tikzcd}
\lstick{\ket{q_{2}}} & \qw & \targ{} & \gate{Y} & \ctrl{1} & \qw \\
\lstick{\ket{q_{3}}} & \qw & \qw & \qw & \targ{} & \qw \\
\lstick{\ket{q_{5}}} & \gate{H} & \ctrl{-2} & \qw & \qw & \qw
\end{tikzcd}
\end{document}
